<resources>
    <string name="app_name">Name of App</string>
    <string name="app_version">0.0.1</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_number_label">Enter Mobile Number</string>
    <string name="verify_number_label">Please confirm your mobile number, We need to verify your number</string>
    <string name="next">Next</string>
    <string name="privacy_policy">Privacy and Policy</string>
    <string name="std_code">+91</string>
    <string name="invalid_mobile_number">Enter valid mobile number.</string>
    <string name="enter_verification_code_label">Enter Verification Code</string>
    <string name="sending_otp_message">We have sent you a 4 digit verification code on +91 %1$s</string>
    <string name="verification_now">Verify Now</string>
    <string name="resend">Resend OTP</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="key_value">Number</string>
    <string name="invalid_otp">Invalid OTP</string>
    <string name="home">Home</string>
    <string name="employee">Employee List</string>
    <string name="hint_name">Name</string>
    <string name="hint_dob">Date of birth</string>
    <string name="hint_age">Age</string>
    <string name="hint_parent_name">Parent name</string>
    <string name="save">Save</string>
    <string name="enter_name">Enter name</string>
    <string name="enter_dob">Select date of birth</string>
    <string name="enter_age">Enter age</string>
    <string name="enter_parent_name">Enter parent name</string>
    <string name="select_parent_relation">Select relation with parent</string>
    <string name="hint_data_not_fount">Data not found.</string>
    <string name="alert_message">Are you sure do you want to delete %1$s</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="add_emp">Add Employee</string>
    <string name="employee_added_successfully">Employee added successfully</string>
    <string name="search">Search</string>
    <string name="update_employee">Update Employee</string>
    <string name="employee_updated_successfully">Employee updated successfully</string>
    <string name="update">Update</string>
    <string name="profile">Profile</string>

</resources>