<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">


    <LinearLayout
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:letterSpacing="0.06"
            android:lineSpacingExtra="3sp"
            android:text="@string/enter_number_label"
            android:textColor="@color/color_333333"
            android:textSize="@dimen/text_size_18"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_with_16"
            android:layout_marginTop="@dimen/margin_with_8"
            android:layout_marginRight="@dimen/margin_with_16"
            android:gravity="center_horizontal"
            android:letterSpacing="0.06"
            android:lineSpacingExtra="7sp"
            android:text="@string/verify_number_label"
            android:textColor="@color/color_333333"
            android:textSize="14sp"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_with_16"
            android:layout_marginTop="@dimen/margin_with_8"
            android:layout_marginRight="@dimen/margin_with_16"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/mTextViewSTDCode"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:letterSpacing="0.06"
                    android:text="@string/std_code"
                    android:lineSpacingExtra="7sp"
                    android:textColor="@color/color_333333"
                    android:textSize="14sp" />

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/mEditTextMobileNumber"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/margin_with_45"
                    android:background="@null"
                    android:digits="+() 1234567890-"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:hint="@string/enter_number_label"
                    android:imeOptions="actionDone"
                    android:inputType="phone"
                    android:maxLength="12"
                    android:paddingLeft="@dimen/text_size_14"
                    android:singleLine="true"
                    android:textColor="@color/color_333333"
                    android:textSize="@dimen/text_size_14" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.1dp"
                android:layout_marginTop="@dimen/margin_with_6"
                android:background="@color/black" />
        </LinearLayout>


        <Button
            android:id="@+id/mButtonNext"
            android:layout_width="140dp"
            android:layout_height="56dp"
            android:layout_gravity="center"
            android:layout_marginLeft="36.7dp"
            android:layout_marginTop="@dimen/margin_with_18"
            android:layout_marginRight="36.7dp"
            android:background="@drawable/button_bg"
            android:gravity="center"
            android:padding="@dimen/margin_with_10"
            android:text="@string/next"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_14" />


        <TextView
            android:id="@+id/mTextViewTermsAndPrivacy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_with_55"
            android:layout_marginTop="@dimen/margin_with_24"
            android:layout_marginRight="@dimen/margin_with_55"
            android:gravity="center_horizontal"
            android:letterSpacing="0.06"
            android:lineSpacingExtra="9sp"
            android:text="@string/privacy_policy"
            android:textColor="@color/black"
            android:textSize="12sp" />
    </LinearLayout>
</RelativeLayout>