<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.activity.employee.AddEmployeeActivity">

    <include
        android:id="@+id/include"
        layout="@layout/app_bar" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/include">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/margin_with_16"
                android:layout_marginTop="@dimen/margin_with_8"
                android:layout_marginRight="@dimen/margin_with_16"
                android:orientation="vertical">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/mEditName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:hint="@string/hint_name"
                        android:imeOptions="actionNext"
                        android:inputType="text"
                        android:singleLine="true"
                        android:textAllCaps="true"
                        android:textColor="@color/color_333333"
                        android:textColorHint="@color/text_hint_color"
                        android:textSize="16sp" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_with_8">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/mEditDOB"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:hint="@string/hint_dob"
                        android:imeOptions="actionNext"
                        android:inputType="date"
                        android:focusable="false"
                        android:singleLine="true"
                        android:textAllCaps="true"
                        android:textColor="@color/color_333333"
                        android:textColorHint="@color/text_hint_color"
                        android:textSize="16sp" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_with_8">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/mEditAge"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:hint="@string/hint_age"
                        android:imeOptions="actionNext"
                        android:inputType="number"
                        android:singleLine="true"
                        android:textAllCaps="true"
                        android:textColor="@color/color_333333"
                        android:textColorHint="@color/text_hint_color"
                        android:textSize="16sp" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_with_8">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/mEditParentName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:hint="@string/hint_parent_name"
                        android:imeOptions="actionNext"
                        android:inputType="text"
                        android:singleLine="true"
                        android:textAllCaps="true"
                        android:textColor="@color/color_333333"
                        android:textColorHint="@color/text_hint_color"
                        android:textSize="16sp" />
                </com.google.android.material.textfield.TextInputLayout>

                <RadioGroup
                    android:id="@+id/radioGroup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_with_8"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/radioSpouse"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="Spouse"
                        android:textColor="@color/color_333333"
                        android:textSize="14dp" />

                    <RadioButton
                        android:id="@+id/radioSon"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="Son"
                        android:textColor="@color/color_333333"
                        android:textSize="14dp" />

                    <RadioButton
                        android:id="@+id/radioDoughter"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="Daughter"
                        android:textColor="@color/color_333333"
                        android:textSize="14dp" />


                </RadioGroup>
                <RadioGroup
                    android:id="@+id/radioGroup1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_with_8"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/radioFather"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="Father"
                        android:textColor="@color/color_333333"
                        android:textSize="14dp" />

                    <RadioButton
                        android:id="@+id/radioMother"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="Mother"
                        android:textColor="@color/color_333333"
                        android:textSize="14dp" />

                </RadioGroup>
                <Button
                    android:id="@+id/mButtonNext"
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/margin_with_18"
                    android:background="@drawable/button_bg"
                    android:gravity="center"
                    android:text="@string/save"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_size_14" />
            </LinearLayout>
        </ScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>